@@ -935,8 +935,8 @@ match_arithmetic_if (void)
       return MATCH_ERROR;
     }
 
-  if (gfc_notify_std (GFC_STD_F95_DEL,
-		      "Obsolete: arithmetic IF statement at %C") == FAILURE)
+  if (gfc_notify_std (GFC_STD_F95_OBS,
+		      "Obsolescent: arithmetic IF statement at %C") == FAILURE)
     return MATCH_ERROR;
 
   new_st.op = EXEC_ARITHMETIC_IF;
@@ -1011,8 +1011,8 @@ gfc_match_if (gfc_statement * if_type)
 	  return MATCH_ERROR;
 	}
       
-      if (gfc_notify_std (GFC_STD_F95_DEL,
-  		          "Obsolete: arithmetic IF statement at %C")
+      if (gfc_notify_std (GFC_STD_F95_OBS,
+  		          "Obsolescent: arithmetic IF statement at %C")
 	  == FAILURE)
         return MATCH_ERROR;
 
